--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,37 @@
     "import pandas as pd\n",
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
-    "ccm = SpotifyClientCredentials(client_id='3d21b87c491647a7849d96cbe4b804ee', client_secret='f418d912a7004f2899bdfc8d4018a4f9')\n",
-    "sp = spotipy.Spotify(client_credentials_manager=ccm)"
+    "cid ='d93af13f2f6343c4b7d9e81ba8f29663' \n",
+    "secret = '96842fd0fdc74a739bd6d82c176b090b'\n",
+    "client_credentials_manager = SpotifyClientCredentials(client_id=cid, client_secret=secret)\n",
+    "token = ccm.get_access_token()\n",
+    "# sp = spotipy.Spotify(auth=token)\n",
+    "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BQCi2gja_WQQjajtPXcFcBIn7ngjp_gv8MkrtCqBlTZhy2wBNpaAOI7VsjTBec9x8_ym4WqXtq071DhS7dk'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,25 +104,25 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Lil Baby</td>\n",
-       "      <td>Woah</td>\n",
+       "      <td>DaBaby</td>\n",
+       "      <td>BOP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Travis Scott</td>\n",
-       "      <td>HIGHEST IN THE ROOM</td>\n",
+       "      <td>Post Malone &amp; Swae Lee</td>\n",
+       "      <td>Sunflower (Spider-Man: Into the Spider-Verse)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           artist                                              title\n",
-       "0     Post Malone                                            Circles\n",
-       "1     Post Malone  Take What You Want (feat. Ozzy Osbourne & Trav...\n",
-       "2  Arizona Zervas                                            Roxanne\n",
-       "3        Lil Baby                                               Woah\n",
-       "4    Travis Scott                                HIGHEST IN THE ROOM"
+       "                   artist                                              title\n",
+       "0             Post Malone                                            Circles\n",
+       "1             Post Malone  Take What You Want (feat. Ozzy Osbourne & Trav...\n",
+       "2          Arizona Zervas                                            Roxanne\n",
+       "3                  DaBaby                                                BOP\n",
+       "4  Post Malone & Swae Lee      Sunflower (Spider-Man: Into the Spider-Verse)"
       ]
      },
      "execution_count": 3,
@@ -113,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +163,7 @@
        " 'total': 0}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
