trying some recommendations

--- a/GettingData-ETL.ipynb
+++ b/GettingData-ETL.ipynb
@@ -45,7 +45,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k=sp.search(q='artist: kodak black', type='artist')['artists']['items'][0]['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'external_urls': {'spotify': 'https://open.spotify.com/artist/3Fl1V19tmjt57oBdxXKAjJ'},\n",
+       " 'href': 'https://api.spotify.com/v1/artists/3Fl1V19tmjt57oBdxXKAjJ',\n",
+       " 'id': '3Fl1V19tmjt57oBdxXKAjJ',\n",
+       " 'name': 'Blueface',\n",
+       " 'type': 'artist',\n",
+       " 'uri': 'spotify:artist:3Fl1V19tmjt57oBdxXKAjJ'}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recs['tracks'][1]['artists'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recs=sp.recommendations(seed_artists=[k])\n",
+    "artists=[]\n",
+    "rec_uris=[]\n",
+    "for r in recs['tracks']:\n",
+    "    for i in r['artists']:\n",
+    "        artists.append(i['name'])\n",
+    "        rec_uris.append(i['id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Kodak Black',\n",
+       " 'Smokepurpp',\n",
+       " 'Murda Beatz',\n",
+       " 'Lil Yachty',\n",
+       " 'Offset',\n",
+       " 'Juice WRLD',\n",
+       " 'Young Thug',\n",
+       " 'Future',\n",
+       " 'NAV',\n",
+       " 'Travis Scott',\n",
+       " 'Kodak Black',\n",
+       " 'Gucci Mane',\n",
+       " 'Roddy Ricch',\n",
+       " 'Lil Uzi Vert',\n",
+       " 'Lil Tecca',\n",
+       " 'Shoreline Mafia',\n",
+       " 'Kodak Black',\n",
+       " 'NAV',\n",
+       " 'Meek Mill',\n",
+       " 'Roddy Ricch',\n",
+       " 'YBN Nahmir',\n",
+       " 'Playboi Carti',\n",
+       " 'Juice WRLD',\n",
+       " 'Kodak Black',\n",
+       " 'Lil Keed',\n",
+       " 'YNW Melly',\n",
+       " 'Lil Uzi Vert',\n",
+       " 'YNW Melly',\n",
+       " 'Gunna',\n",
+       " 'Young Thug']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "artists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +228,26 @@
     "    except:\n",
     "        artistss.append('NAN')\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'46SHBwWsqBkxI7EeeBEQG7'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.search(q='artist: kodak black', type='artist')['artists']['items'][0]['id']"
    ]
   },
   {
