--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,46 +45,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Type a few of your favorite artists:lil tecca, 21 savage, kodak black\n"
-     ]
-    }
-   ],
-   "source": [
-    "seeds=input(\"Type a few of your favorite artists:\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "seeds=seeds.split(',')"
+    "seeds=[]\n",
+    "i=0\n",
+    "while i!='stop':\n",
+    "    input(\"Type a few of your favorite artists. Enter 'stop' when done:\")\n",
+    "    seeds.append(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "seed_ids=[]\n",
     "for seed in seeds:\n",
-    "    seed_ids.append(sp.search(q='artist: '+ seed, type='artist')['artists']['items'][0]['id'])\n"
+    "    seed_ids.append(sp.search(q='artist: '+ seed, type='artist')['artists']['items'][0]['id'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -101,15 +88,15 @@
     {
      "data": {
       "text/plain": [
-       "{'external_urls': {'spotify': 'https://open.spotify.com/artist/1RyvyyTE3xzB2ZywiAwp0i'},\n",
-       " 'href': 'https://api.spotify.com/v1/artists/1RyvyyTE3xzB2ZywiAwp0i',\n",
-       " 'id': '1RyvyyTE3xzB2ZywiAwp0i',\n",
-       " 'name': 'Future',\n",
+       "{'external_urls': {'spotify': 'https://open.spotify.com/artist/7wlFDEWiM5OoIAt8RSli8b'},\n",
+       " 'href': 'https://api.spotify.com/v1/artists/7wlFDEWiM5OoIAt8RSli8b',\n",
+       " 'id': '7wlFDEWiM5OoIAt8RSli8b',\n",
+       " 'name': 'YoungBoy Never Broke Again',\n",
        " 'type': 'artist',\n",
-       " 'uri': 'spotify:artist:1RyvyyTE3xzB2ZywiAwp0i'}"
+       " 'uri': 'spotify:artist:7wlFDEWiM5OoIAt8RSli8b'}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,25 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "?\n"
-     ]
-    }
-   ],
-   "source": [
-    "if '21 savage'=='21 savage':\n",
-    "    print('?')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -146,21 +115,24 @@
      "output_type": "stream",
      "text": [
       "kodak black\n",
-      "21 savage\n",
-      "metro boomin\n",
+      "lil wayne\n",
       "future\n",
-      "blueface\n",
-      "juice wrld\n",
-      "mike will made-it\n",
+      "pnb rock\n",
       "rae sremmurd\n",
-      "big sean\n",
-      "quavo\n",
-      "pharrell williams\n",
-      "comethazine\n",
-      "ski mask the slump god\n",
-      "lil uzi vert\n",
-      "dababy\n",
-      "travis scott\n"
+      "gucci mane\n",
+      "offset\n",
+      "ynw melly\n",
+      "kanye west\n",
+      "quality control\n",
+      "lil yachty\n",
+      "ty dolla $ign\n",
+      "youngboy never broke again\n",
+      "metro boomin\n",
+      "blocboy jb\n",
+      "drake\n",
+      "smokepurpp\n",
+      "lil pump\n",
+      "lil baby\n"
      ]
     }
    ],
@@ -170,45 +142,51 @@
     "for r in recs['tracks']:\n",
     "    for i in r['artists']:\n",
     "        if i['name'].lower() not in seeds and i['name'] not in artists:\n",
-    "            print(i['name'].lower())\n",
-    "            artists.append(i['name'])\n",
-    "            rec_uris.append(i['id'])"
+    "            if i['id'] not in rec_uris:\n",
+    "                print(i['name'].lower())\n",
+    "                artists.append(i['name'])\n",
+    "                rec_uris.append(i['id'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# artists=artists[2:]"
+    "stop=len(seeds)\n",
+    "artists=artists[stop:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Metro Boomin',\n",
+       "['Lil Wayne',\n",
        " 'Future',\n",
-       " 'Blueface',\n",
-       " 'Juice WRLD',\n",
-       " 'Mike WiLL Made-It',\n",
+       " 'PnB Rock',\n",
        " 'Rae Sremmurd',\n",
-       " 'Big Sean',\n",
-       " 'Quavo',\n",
-       " 'Pharrell Williams',\n",
-       " 'Comethazine',\n",
-       " 'Ski Mask The Slump God',\n",
-       " 'Lil Uzi Vert',\n",
-       " 'DaBaby',\n",
-       " 'Travis Scott']"
+       " 'Gucci Mane',\n",
+       " 'Offset',\n",
+       " 'YNW Melly',\n",
+       " 'Kanye West',\n",
+       " 'Quality Control',\n",
+       " 'Lil Yachty',\n",
+       " 'Ty Dolla $ign',\n",
+       " 'YoungBoy Never Broke Again',\n",
+       " 'Metro Boomin',\n",
+       " 'BlocBoy JB',\n",
+       " 'Drake',\n",
+       " 'Smokepurpp',\n",
+       " 'Lil Pump',\n",
+       " 'Lil Baby']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
