--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,33 +45,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type a few of your favorite artists:kodak black, future, 21 savage\n"
+     ]
+    }
+   ],
    "source": [
-    "seeds=[]\n",
-    "i=0\n",
-    "while i!='stop':\n",
-    "    input(\"Type a few of your favorite artists. Enter 'stop' when done:\")\n",
-    "    seeds.append(i)"
+    "seeds=input(\"Type a few of your favorite artists:\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "seed_ids=[]\n",
-    "for seed in seeds:\n",
-    "    seed_ids.append(sp.search(q='artist: '+ seed, type='artist')['artists']['items'][0]['id'])"
+    "seeds=seeds.split(',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kodak black\n",
+      " future\n",
+      " 21 savage\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed_ids=[]\n",
+    "for seed in seeds:\n",
+    "    seed_ids.append(sp.search(q='artist: '+ seed, type='artist')['artists']['items'][0]['id'])\n",
+    "#     print(sp.search(q='artist: '+ seed, type='artist')['artists']['items'][0]['id'])\n",
+    "    print(seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['46SHBwWsqBkxI7EeeBEQG7', '1RyvyyTE3xzB2ZywiAwp0i', '1URnnhqYAYcrqrcwql10ft']"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seed_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,23 +125,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'external_urls': {'spotify': 'https://open.spotify.com/artist/7wlFDEWiM5OoIAt8RSli8b'},\n",
-       " 'href': 'https://api.spotify.com/v1/artists/7wlFDEWiM5OoIAt8RSli8b',\n",
-       " 'id': '7wlFDEWiM5OoIAt8RSli8b',\n",
-       " 'name': 'YoungBoy Never Broke Again',\n",
+       "{'external_urls': {'spotify': 'https://open.spotify.com/artist/1RyvyyTE3xzB2ZywiAwp0i'},\n",
+       " 'href': 'https://api.spotify.com/v1/artists/1RyvyyTE3xzB2ZywiAwp0i',\n",
+       " 'id': '1RyvyyTE3xzB2ZywiAwp0i',\n",
+       " 'name': 'Future',\n",
        " 'type': 'artist',\n",
-       " 'uri': 'spotify:artist:7wlFDEWiM5OoIAt8RSli8b'}"
+       " 'uri': 'spotify:artist:1RyvyyTE3xzB2ZywiAwp0i'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,32 +152,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kodak black\n",
-      "lil wayne\n",
+      "big sean\n",
+      "e-40\n",
+      "21 savage\n",
       "future\n",
-      "pnb rock\n",
-      "rae sremmurd\n",
-      "gucci mane\n",
-      "offset\n",
+      "nav\n",
+      "lil uzi vert\n",
+      "sheck wes\n",
+      "rihanna\n",
       "ynw melly\n",
-      "kanye west\n",
+      "quavo\n",
+      "lil baby\n",
       "quality control\n",
       "lil yachty\n",
-      "ty dolla $ign\n",
-      "youngboy never broke again\n",
-      "metro boomin\n",
-      "blocboy jb\n",
-      "drake\n",
       "smokepurpp\n",
-      "lil pump\n",
-      "lil baby\n"
+      "metro boomin\n",
+      "mike will made-it\n",
+      "rae sremmurd\n",
+      "pharrell williams\n",
+      "gunna\n",
+      "young thug\n",
+      "j. cole\n",
+      "travis scott\n"
      ]
     }
    ],
@@ -150,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,33 +208,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Lil Wayne',\n",
-       " 'Future',\n",
-       " 'PnB Rock',\n",
-       " 'Rae Sremmurd',\n",
-       " 'Gucci Mane',\n",
-       " 'Offset',\n",
+       "['Future',\n",
+       " 'NAV',\n",
+       " 'Lil Uzi Vert',\n",
+       " 'Sheck Wes',\n",
+       " 'Rihanna',\n",
        " 'YNW Melly',\n",
-       " 'Kanye West',\n",
+       " 'Quavo',\n",
+       " 'Lil Baby',\n",
        " 'Quality Control',\n",
        " 'Lil Yachty',\n",
-       " 'Ty Dolla $ign',\n",
-       " 'YoungBoy Never Broke Again',\n",
-       " 'Metro Boomin',\n",
-       " 'BlocBoy JB',\n",
-       " 'Drake',\n",
        " 'Smokepurpp',\n",
-       " 'Lil Pump',\n",
-       " 'Lil Baby']"
+       " 'Metro Boomin',\n",
+       " 'Mike WiLL Made-It',\n",
+       " 'Rae Sremmurd',\n",
+       " 'Pharrell Williams',\n",
+       " 'Gunna',\n",
+       " 'Young Thug',\n",
+       " 'J. Cole',\n",
+       " 'Travis Scott']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
