--- a/grinch.ipynb
+++ b/grinch.ipynb
@@ -199,17 +199,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Yeah, yeah, put bitch (On), I put niggas like motherfuckin cologne.\n",
-      "Yeah, huh, life like motherfuckin dream (Like dream).\n",
-      "Ill kill brother, pussy nigga, snitch.\n",
-      "Ill kill brother, pussy nigga, snitch.\n"
+     "ename": "NameError",
+     "evalue": "name 'doc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-5d884cf1d7de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgensim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummarization\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummarizer\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msummarize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msummarize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'doc' is not defined"
      ]
     }
    ],
@@ -273,6 +274,29 @@
    "source": [
     "!pip install textteaser\n",
     "!pip install _version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Job design is used in human resources in order to satisfy certain requirements of both the employer and the employee.\n",
+      "Companies that use the motivational approach offer their employees task variety, task identity, task significance, and feedback that the efficiency approach does not employ.\n",
+      "From the employee’s perspective, this may be a better approach because they are able to change their tasks, not working in an assembly line doing the same thing repeatedly.\n",
+      "Whereas in the efficiency approach, workers may be putting in one screw in the same place repeatedly, unbeknownst of how it applies to other employee’s tasks or the final product.\n",
+      "A company may favor the motivational approach because they value employee retention over the cost of the time that this approach demands.\n",
+      "Another company may favor the efficiency approach because they have a set system that works well to build their products, and if their employees may be somewhat dispensable to them.\n"
+     ]
+    }
+   ],
+   "source": [
+    "essay=\"\tJob design is used in human resources in order to satisfy certain requirements of both the employer and the employee. The goal of job design is to reduce dissatisfaction in the workplace as well as employee alienation. When utilizing this method, human resource managers focus on organizational, technological, social, and personal aspects of the company overall. This includes the company’s processes, the company’s culture, and the worker satisfaction within the company. Two approaches for job design are the Efficiency Approach and the Motivational Approach, and each have their upsides and their pitfalls depending on the person and the context. The efficiency approach to job design focuses on specific jobs that narrow the worker’s tasks and simplify them into simpler jobs so as to increase efficiency.  Many companies that implement this approach will often be implementing assembly lines. This seems that it could be conflicting with what job design is in itself. Assembly lines could increase employee alienation, making them further removed from the product they are producing. However, there are still advantages to this approach of job design. For the worker and the working class, there are lower industry barriers in this type of work, making more jobs available to those who have little education. Furthermore, for those workers looking for a less serious job with minimal responsibility, this approach is ideal as there is low responsibility and little mental effort is required. On the other hand, employees have little control over their labor, it may be hard to feel fulfilled in this type of work, and there are fewer opportunities for growth. On the employer side, the efficiency approach makes training very simple as the tasks are similar and monotonous. Many times, employers can have other employees train new employees because the tasks are easy to explain and pick up on. This peer-taught and fast-paced workplace produces high productivity, and the fact that the entry barriers are low allow the company to pay low wages. With these advantages to the employer, there may be a high turnover rate as employees may become dissatisfied. The motivational approach to job design follows the definition of job design better than the efficiency approach. The motivational approach provides psychological benefits for employees that lead to higher job satisfaction, job motivation, and employee retention or lower turnover rates. Companies that use the motivational approach offer their employees task variety, task identity, task significance, and feedback that the efficiency approach does not employ. From the employee’s perspective, this may be a better approach because they are able to change their tasks, not working in an assembly line doing the same thing repeatedly. By rotating tasks periodically, employees stay interested. This approach also helps to diminish employee alienation, with task identity and task identity, employees are able to complete a whole, smaller part of their task and with task significance employees know the importance of their task relative to other employee’s tasks or the final product. Whereas in the efficiency approach, workers may be putting in one screw in the same place repeatedly, unbeknownst of how it applies to other employee’s tasks or the final product. However, there are some downfalls to this approach. For one, it can be time consuming and costly. Each employee must be described their task in detail and each employee must be trained when they change a task. This can become inefficient. In order to sit down and provide feedback to the employee, time must be allotted. For many large business people, time is money, so this aspect is unwanted. In conclusion, these two approaches to job design both vary vastly from each other. A company may favor the motivational approach because they value employee retention over the cost of the time that this approach demands. Another company may favor the efficiency approach because they have a set system that works well to build their products, and if their employees may be somewhat dispensable to them. Job design can greatly affect a company’s culture as well as it’s overall success so it is important that a business considers their goals and needs in order to decipher which job design approach to employ.\"\n",
+    "print(summarize(essay))\n"
    ]
   },
   {
